# joint_venture

./: LICENSE  README.md  pyproject.toml
src/joint_venture/: __init__.py  cli.py  splitter.py  utils.py
src/stl_splitter/: __init__.py  cli.py  dovetail.py  mesh_loader.py
