[project]
name = "joint-venture"
version = "0.1.0"
description = "Split large STL files into multiple printable parts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "manifold3d>=3.3.2",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "rtree>=1.4.1",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
    "trimesh>=4.11.1",
]

[project.scripts]
joint-venture = "joint_venture.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/joint_venture"]
